--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                         </div>
                         
                         <div class="text-start">
-                            <button type="button" class="btn">Submit</button>
+                            <button type="submit" class="btn">Submit</button>
                         </div>
                     </form>
                 </div>
